@@ -1,3 +1,9 @@
+2004-05-21  Bruno Haible  <bruno@clisp.org>
+
+	* lispbibl.d (char_int): Make it work when some heapcode bits are
+	in the high bits, not only in the low bits.
+	* genclisph.d (main): Update.
+
 2004-05-23  Bruno Haible  <bruno@clisp.org>
 
 	* spvw_allocate.d (make_space_gc) [SPVW_BLOCKS]: Take
